fix scrolling issue with overflow hidden

--- a/phutball/frontend/src/App.css
+++ b/phutball/frontend/src/App.css
@@ -1,6 +1,4 @@
 html, body {
-  width: 100vw;
-  height: 100vh;
   margin: 0;
   padding: 0;
   border:0;
